syntax = "proto3";

package example;

message Example {
    int64 id = 1;
    string name = 2;
}

message GetExampleRequest {
    int64 id = 1;
    string name = 2;
}

message GetExampleResponse {
    Example example = 1;
}

service ExampleService {
    rpc GetExample(GetExampleRequest) returns (GetExampleResponse);
}
